Bug 1259366 - Flush after eos of android::MediaCodec r=jolin